Fixed alignment function error propagation and tweaks

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -88,6 +88,12 @@ button[type="submit"] {
     border-radius: 6px;
 }
 
+button:hover {
+    color: rgb(252, 247, 106);
+    background-color: rgba(126, 0, 0, 0.749);
+    text-decoration: none;
+}
+
 input[type="file"] {
     margin-right: 2px;
     border-left: 2px solid #252525;
@@ -181,4 +187,8 @@ p {
     font-family: sans-serif;
     font-size: large;
     padding: 1px;
+}
+
+.errors {
+    color: red
 }
